refactor: improve code readability all parts
코드컨벤션 적용 및 향상된 Stream API 적용